doc - Grundlagen: neuer name für Kapitel Kartigraphie

--- a/BA_argo_doc/grundlagen.tex
+++ b/BA_argo_doc/grundlagen.tex
@@ -29,7 +29,7 @@ Als Hilfsmittel zur Überwindung der oben genannten Probleme werden Objekt-Realt
     
 
 % BEGIN -- Geographische Informationssysteme
-    \subsection{Geographische Informationssysteme  ODER }
+    \subsection{Kartographie}
 % END
 
 % BEGIN -- Software
