doc - Grundlagen Kartographie; Listings graustufen.

--- a/BA_argo_doc/bib.bib
+++ b/BA_argo_doc/bib.bib
@@ -260,3 +260,12 @@ note = {(Accessed on 02/20/2018)}
     year = {2016},
     note = {(Accessed on 03/01/2018)}
 }
+
+@book{witte2011vermessungskunde,
+  title={Vermessungskunde und Grundlagen der Statistik f{\"u}r das Bauwesen},
+  author={Witte, B. and Sparla, P.},
+  isbn={9783879074976},
+  url={https://books.google.de/books?id=RN7ubwAACAAJ},
+  year={2011},
+  publisher={Wichmann}
+}
