doc - Neue Darstellung des KLassendiagrams

--- a/BA_argo_doc/preamble.tex
+++ b/BA_argo_doc/preamble.tex
@@ -95,8 +95,8 @@ breaklinks=true] {hyperref}
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
 \definecolor{backcolour}{RGB}{244,244,244}
 \definecolor{codedarkgey}{RGB}{128,128,128}
-\definecolor{codewhite}{rgb}{1,1,1}
-\definecolor{codeblack}{rgb}{0,0,0}
+\definecolor{codewhite}{RGB}{252,252,252}
+\definecolor{codeblack}{RGB}{83,83,83}
 %
 \usepackage{listings}
 %
